kubernetes/cray-hms-bss/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "cray-bss-cloud-init"
spec:
  hosts:
    - "*"
  gateways:
    - services-gateway
  http:
    - match:
      - port: 8888
      route:
      - destination:
          host: cray-bss
          port:
            number: 80
